@@ -3,7 +3,6 @@ package org.example.staj_projesi.exception.handler;
 import jakarta.validation.ConstraintViolationException;
 import org.example.staj_projesi.exception.ErrorDetail;
 import org.example.staj_projesi.exception.ErrorResponse;
-import org.example.staj_projesi.exception.ErrorResponseBuilder;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
@@ -14,14 +13,9 @@ import java.util.stream.Collectors;
 public class GlobalExceptionHandler {
     @ExceptionHandler(ConstraintViolationException.class)
     public ResponseEntity<Object> handleConstraintViolationException(ConstraintViolationException e) {
-        ErrorResponseBuilder errorResponseBuilder = new ErrorResponseBuilder();
-        errorResponseBuilder = errorResponseBuilder.setStatus(500);
-        errorResponseBuilder = errorResponseBuilder.setDetails(e.getConstraintViolations().stream().map( v -> new ErrorDetail(
-                v.getPropertyPath().toString(),
-                v.getMessage()
-        )).toList());
-        errorResponseBuilder = errorResponseBuilder.setMessage("Validation failed");
-        ErrorResponse errorResponse = errorResponseBuilder.createErrorResponse();
+        ErrorResponse errorResponse =  new ErrorResponse(400, "Bad Request", e.getConstraintViolations().stream()
+                .map(constraintViolation -> new ErrorDetail(constraintViolation.getPropertyPath().toString(), constraintViolation.getMessage()))
+                .collect(Collectors.toList()));
         return ResponseEntity.badRequest().body(errorResponse);
     }
 }
